[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planckage"
version = "0.1.0"
description = "A tool for managing scientific data analysis"
authors = [{ name = "Colin Kinz-Thompson", email = "colin.kinzthompson@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "typer",
  "platformdirs"
]

[project.scripts]
planckage = "planckage.cli:app"